--- a/src/main/resources/templates/events/eventDetails.html
+++ b/src/main/resources/templates/events/eventDetails.html
@@ -40,18 +40,28 @@
       </small>
     </h1>
 
-    <!-- page icon -->
-    <div class="clearfix" th:unless="${event.organizationInfo.hasLackOfOrganizers()}">
+    <!-- default page icon -->
+    <div class="clearfix" th:unless="${event.organizationInfo.hasLackOfOrganizers()} or ${event.canceled}">
       <div class="pull-right">
-        <span class="glyphicon glyphicon-tent details-icon"></span>
+        <span class="glyphicon glyphicon-tent details-icon-warning"></span>
       </div>
     </div>
 
-    <div class="clearfix" th:if="${event.organizationInfo.hasLackOfOrganizers()}">
+    <!-- too few organizers page icon -->
+    <div class="clearfix" th:if="${event.organizationInfo.hasLackOfOrganizers()} and not ${event.canceled}">
       <div class="pull-right">
         <span class="glyphicon glyphicon-warning-sign details-icon details-icon-danger"
               data-toggle="tooltip" data-placement="bottom"
               data-title="Zu wenig Betreuer*innen"></span>
+      </div>
+    </div>
+    
+    <!-- canceled event page icon -->
+    <div class="clearfix" th:if="${event.canceled}">
+      <div class="pull-right">
+        <span class="glyphicon glyphicon-remove-sign details-icon details-icon-danger"
+              data-toggle="tooltip" data-placement="bottom"
+              data-title="Veranstaltung wurde abgesagt"></span>
       </div>
     </div>
 
@@ -90,6 +100,12 @@
     </ul>
 
   </header>
+
+  <div class="center margin-top-lg" th:if="${event.canceled}">
+    <section class="alert alert-warning"> 
+      Diese Veranstaltung wurde abgesagt und kann deshalb nicht weiter modifiziert werden.
+    </section>
+  </div>
 
   <article class="tab-content">
 
