Fix display of tent icon

--- a/src/main/resources/templates/events/eventDetails.html
+++ b/src/main/resources/templates/events/eventDetails.html
@@ -43,7 +43,7 @@
     <!-- default page icon -->
     <div class="clearfix" th:unless="${event.organizationInfo.hasLackOfOrganizers()} or ${event.canceled}">
       <div class="pull-right">
-        <span class="glyphicon glyphicon-tent details-icon-warning"></span>
+        <span class="glyphicon glyphicon-tent details-icon"></span>
       </div>
     </div>
 
