Make ternary JuleicaCard state explicit

--- a/src/main/resources/templates/events/organization.html
+++ b/src/main/resources/templates/events/organization.html
@@ -405,6 +405,10 @@
                             [[${{counselor.activistProfile.juleicaCard.expiryDate}}]]
                           </td>
                           <td class="col-md-11"
+                              th:if="${counselor.activistProfile.hasJuleica()} and not ${counselor.activistProfile.juleicaCard.expiryDateDefined}">
+                            Juleica vorhanden, aber Ablaufdatum unbekannt.
+                          </td>
+                          <td class="col-md-11"
                               th:unless="${counselor.activistProfile.hasJuleica()}">
                             keine Juleica
                           </td>
