--- a/src/main/resources/templates/persons/overview.html
+++ b/src/main/resources/templates/persons/overview.html
@@ -52,7 +52,7 @@
                 <span class="glyphicon glyphicon-plus"></span>
                 Hinzufügen
               </a>
-              <a href="filterPersons_legacy.html" class="btn btn-default"
+              <a href="../../static/resources/html/filterPersons_legacy.html" class="btn btn-default"
 								 data-toggle="tooltip" data-placement="bottom"
 								 data-title="Funktioniert bald wieder.. Versprochen!"
 								 th:href="@{/persons/filter}">
