--- a/src/main/resources/templates/persons/filterPersons.html
+++ b/src/main/resources/templates/persons/filterPersons.html
@@ -35,6 +35,12 @@
 			<h1 class="page-title">Nach Personen suchen</h1>
 			<hr/>
 
+			<div class="row no-filters">
+				<div class="alert alert-info">
+					Zur Zeit sind keine Filter ausgewählt
+				</div>
+			</div>
+
 			<div class="row">
 
 					<div th:replace="~{filter :: %form(filterForm=${filterForm})}"></div>
@@ -55,7 +61,7 @@
               <span class="checkbox">
                 <label th:inline="text">
                   <input type="checkbox" data-toggle="collapse-inline" th:id="${filterGroup.togglerId}"
-												 th:attrappend="data-target=|#${filterGroup.groupId}|"/> nach [[${filterGroup.name}]]-Details filtern
+												 th:attrappend="data-target='#' + ${filterGroup.groupId}"/> nach [[${filterGroup.name}]]-Details filtern
                 </label>
               </span>
 					</li>
@@ -66,7 +72,7 @@
 				</div>
 				<ul class="nav nav-pills nav-stacked" th:remove="all-but-first">
 					<li role="presentation" th:each="filterGroup : ${filterForm.filterGroups}">
-						<a th:href="|#${filterGroup.groupId}|" th:inline="text">
+						<a th:href="'#' + ${filterGroup.groupId}" th:inline="text">
 							<span class="glyphicon glyphicon-chevron-right"></span>
 							[[${filterGroup.name}]]
 						</a>
@@ -112,8 +118,11 @@
 				th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <script type="text/javascript" src="../../static/resources/js/bootstrap.min.js"
 				th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-<script src="../../static/resources/js/init.js" th:src="@{/resources/js/init.js}"></script>
+<script src="../js/collapse.js" type="text/javascript" th:src="@{/resources/js/collapse.js}"></script>
 <script src="../static/resources/js/filter.js"
 				th:src="@{/resources/js/filter.js}"></script>
+<script src="../../static/resources/js/init.js" th:src="@{/resources/js/init.js}"></script>
+<script src="../../static/resources/js/filterPersons.js"
+				th:src="@{/resources/js/filterPersons.js}"></script>
 </body>
 </html>
