--- a/src/main/resources/templates/persons/filterPersonsResults.html
+++ b/src/main/resources/templates/persons/filterPersonsResults.html
@@ -40,7 +40,7 @@
 								<span class="glyphicon glyphicon-envelope"></span>
 								<span class="hide-sm">E-Mail verfassen</span>
 							</a>
-							<button type="submit" class="btn btn-default" form="result-processing">
+							<button type="submit" class="btn btn-default" form="result-processing" disabled="disabled">
 								<span class="glyphicon glyphicon-stats"></span>
 								<span class="hide-sm">Daten weiterverarbeiten</span>
 							</button>
