--- a/src/main/resources/templates/persons/personDetails.html
+++ b/src/main/resources/templates/persons/personDetails.html
@@ -7,29 +7,29 @@
 <!--/*@thymesVar id="event" type="de.naju.adebar.model.events.Event"*/-->
 
 <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width,initial-scale=1" name="viewport"/>
-  <meta th:name="_csrf" th:value="${_csrf.token}"/>
-  <title th:text="${person.name} + ' | Adebar'">Jane Doe | Adebar</title>
-  <link href="../../static/resources/css/bootstrap.min.css" rel="stylesheet"
-        th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"
-        type="text/css"/>
+	<meta charset="utf-8"/>
+	<meta content="width=device-width,initial-scale=1" name="viewport"/>
+	<meta th:name="_csrf" th:value="${_csrf.token}"/>
+	<title th:text="${person.name} + ' | Adebar'">Jane Doe | Adebar</title>
+	<link href="../../static/resources/css/bootstrap.min.css" rel="stylesheet"
+				th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"
+				type="text/css"/>
 
-  <link href="../../static/resources/css/style.css" rel="stylesheet"
-        th:href="@{/resources/css/style.css}"
-        type="text/css"/>
-  <link href="../../static/resources/css/personDetails.css" rel="stylesheet"
-        th:href="@{/resources/css/personDetails.css}"
-        type="text/css"/>
-  <link href="../../static/resources/css/timeline.css" rel="stylesheet"
-        th:href="@{/resources/css/timeline.css}"
-        type="text/css"/>
+	<link href="../../static/resources/css/style.css" rel="stylesheet"
+				th:href="@{/resources/css/style.css}"
+				type="text/css"/>
+	<link href="../../static/resources/css/personDetails.css" rel="stylesheet"
+				th:href="@{/resources/css/personDetails.css}"
+				type="text/css"/>
+	<link href="../../static/resources/css/timeline.css" rel="stylesheet"
+				th:href="@{/resources/css/timeline.css}"
+				type="text/css"/>
 
-  <link href="../../static/resources/css/bootstrap-select.min.css" rel="stylesheet"
-        th:href="@{/resources/css/bootstrap-select.min.css}"
-        type="text/css"/>
+	<link href="../../static/resources/css/bootstrap-select.min.css" rel="stylesheet"
+				th:href="@{/resources/css/bootstrap-select.min.css}"
+				type="text/css"/>
 
-  <link rel="shortcut icon" th:href="@{/resources/res/favicon.ico}"/>
+	<link rel="shortcut icon" th:href="@{/resources/res/favicon.ico}"/>
 </head>
 
 <body>
@@ -40,240 +40,242 @@
 <!-- page specific content-->
 <main id="main">
 
-  <header id="page-header">
-    <a href="overview.html" th:href="@{/persons}">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      Zurück zur Personen-Übersicht
-      <span class="glyphicon glyphicon-info-sign" data-placement="bottom"
-            data-title="Bald kommt man hier zur letzten Seite zurück"
-            data-toggle="tooltip"></span>
-    </a>
+	<header id="page-header">
+		<a href="overview.html" th:href="@{/persons}">
+			<span class="glyphicon glyphicon-chevron-left"></span>
+			Zurück zur Personen-Übersicht
+			<span class="glyphicon glyphicon-info-sign" data-placement="bottom"
+						data-title="Bald kommt man hier zur letzten Seite zurück"
+						data-toggle="tooltip"></span>
+		</a>
 
-    <h1 th:text="|Profil von ${person.name}|">Profil von Jane Doe</h1>
+		<h1 th:text="|Profil von ${person.name}|">Profil von Jane Doe</h1>
 
-    <!--
-  TODO
-    instead of defining the data to load in the corresponding tabs, they should be placed in the <section> where they are actually inserted
-    then, upon clicking on a tab all the <section>s will be queried and the data will be inserted
-    -->
+		<!--
+	TODO
+		instead of defining the data to load in the corresponding tabs, they should be placed in the <section> where they are actually inserted
+		then, upon clicking on a tab all the <section>s will be queried and the data will be inserted
+		-->
 
-    <div class="clearfix">
-      <div class="pull-right">
-        <span class="glyphicon glyphicon-user details-icon"></span>
-      </div>
-    </div>
+		<div class="clearfix">
+			<div class="pull-right">
+				<span class="glyphicon glyphicon-user details-icon"></span>
+			</div>
+		</div>
 
-    <ul class="nav nav-tabs category-nav" role="tablist" th:fragment="navigation">
-      <li role="presentation" th:classappend="${tab == 'general'} ? 'active'">
-        <a class="tab-controller" href="#overview" th:href="@{/persons/{id}(id=${person.id})}">
-          Allgemeine Infos
-        </a>
-      </li>
-      <li role="presentation" th:classappend="${tab == 'activist-referent'} ? 'active'">
-        <a class="tab-controller" href="#activist-referent"
-           th:href="@{/persons/{id}/activist-referent(id=${person.id})}">
-          Aktiven + Referenteninfos
-        </a>
-      </li>
-      <li role="presentation" th:classappend="${tab == 'events'} ? 'active'">
-        <a class="tab-controller" href="#events" th:href="@{/persons/{id}/events(id=${person.id})}">
-          Veranstaltungsteilnahmen
-        </a>
-      </li>
-      <li role="presentation" th:classappend="${tab == 'newsletters'} ? 'active'">
-        <a class="tab-controller" href="#newsletters"
-           th:href="@{/persons/{id}/newsletters(id=${person.id})}">
-          Newsletter
-        </a>
-      </li>
-    </ul>
-  </header>
+		<ul class="nav nav-tabs category-nav" role="tablist" th:fragment="navigation">
+			<li role="presentation" th:classappend="${tab == 'general'} ? 'active'">
+				<a class="tab-controller" href="#overview" th:href="@{/persons/{id}(id=${person.id})}">
+					Allgemeine Infos
+				</a>
+			</li>
+			<li role="presentation" th:classappend="${tab == 'activist-referent'} ? 'active'">
+				<a class="tab-controller" href="#activist-referent"
+					 th:href="@{/persons/{id}/activist-referent(id=${person.id})}">
+					Aktiven + Referenteninfos
+				</a>
+			</li>
+			<li role="presentation" th:classappend="${tab == 'events'} ? 'active'">
+				<a class="tab-controller" href="#events" th:href="@{/persons/{id}/events(id=${person.id})}">
+					Veranstaltungsteilnahmen
+				</a>
+			</li>
+			<li role="presentation" th:classappend="${tab == 'newsletters'} ? 'active'">
+				<a class="tab-controller" href="#newsletters"
+					 th:href="@{/persons/{id}/newsletters(id=${person.id})}">
+					Newsletter
+				</a>
+			</li>
+		</ul>
+	</header>
 
-  <div class="modal modal-error fade" id="participation-failed-dialog" role="dialog" tabindex="-1"
-       th:if="${participationFailed}">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h2 class="modal-title h3">Konnte nicht an allen Veranstaltungen teilnehmen</h2>
-        </div>
-        <div class="modal-body">
-          <p>
-            Die Person konnte zu den folgenden Veranstaltungen nicht hinzugefügt werden. Bitte
-            versuche es auf der Seite der Veranstaltung erneut.
-          </p>
-          <div class="list-group">
-            <div class="list-group-item" th:each="event : ${failedParticipations.keySet()}"
-                 th:inline="text">
-              [[${event.name}]]
-              <small th:text="|(${#time.formatTimeSpan(event.startTime, event.endTime)})|">
-                (09.-13.05.18)
-              </small>
-              <div class="pull-right">
+	<div class="modal modal-error fade" id="participation-failed-dialog" role="dialog" tabindex="-1"
+			 th:if="${participationFailed}">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h2 class="modal-title h3">Konnte nicht an allen Veranstaltungen teilnehmen</h2>
+				</div>
+				<div class="modal-body">
+					<p>
+						Die Person konnte zu den folgenden Veranstaltungen nicht hinzugefügt werden. Bitte
+						versuche es auf der Seite der Veranstaltung erneut.
+					</p>
+					<div class="list-group">
+						<div class="list-group-item" th:each="event : ${failedParticipations.keySet()}"
+								 th:inline="text">
+							[[${event.name}]]
+							<small th:text="|(${#time.formatTimeSpan(event.startTime, event.endTime)})|">
+								(09.-13.05.18)
+							</small>
+							<div class="pull-right">
                     <span class="glyphicon glyphicon-baby-formula" data-placement="bottom"
-                          data-title="Zu jung" data-toggle="tooltip"
-                          th:if="${failedParticipations.get(event).name() == 'TOO_YOUNG'}"></span>
-                <span class="glyphicon glyphicon-bed" data-placement="bottom"
-                      data-title="Ausgebucht"
-                      data-toggle="tooltip"
-                      th:if="${failedParticipations.get(event).name() == 'BOOKED_OUT'}"></span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button class="btn btn-default" data-dismiss="modal" type="button">
-            Ok
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
+													data-title="Zu jung" data-toggle="tooltip"
+													th:if="${failedParticipations.get(event).name() == 'TOO_YOUNG'}"></span>
+								<span class="glyphicon glyphicon-bed" data-placement="bottom"
+											data-title="Ausgebucht"
+											data-toggle="tooltip"
+											th:if="${failedParticipations.get(event).name() == 'BOOKED_OUT'}"></span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="modal-footer">
+					<button class="btn btn-default" data-dismiss="modal" type="button">
+						Ok
+					</button>
+				</div>
+			</div>
+		</div>
+	</div>
 
-  <article class="tab-content">
+	<article class="tab-content">
 
-    <!-- general and family relationship -->
-    <div class="tab-pane container-fluid" id="overview"
-         th:classappend="${tab == 'general'} ? 'active'"
-         th:if="${tab == 'general'}">
+		<!-- general and family relationship -->
+		<div class="tab-pane container-fluid" id="overview"
+				 th:classappend="${tab == 'general'} ? 'active'"
+				 th:if="${tab == 'general'}">
 
-      <section class="display-category" id="general"
-               th:replace="persons/personDetailsOverview :: general">
+			<section class="display-category" id="general"
+							 th:replace="persons/personDetailsOverview :: general">
 
-      </section>
+			</section>
 
-      <section class="display-category" id="family-relations"
-               th:replace="persons/familyRelations :: graph">
-        <div class="row">
-          <h2>Verwandschaft</h2>
-        </div>
-        <div class="row">
-          <div class="container bordered round height-md" id="relationship-graph"></div>
-        </div>
-      </section>
+			<section class="display-category" id="family-relations"
+							 th:replace="persons/familyRelations :: graph">
+				<div class="row">
+					<h2>Verwandschaft</h2>
+				</div>
+				<div class="row">
+					<div class="container bordered round height-md" id="relationship-graph"></div>
+				</div>
+			</section>
 
-    </div>
+		</div>
 
-    <!-- activist and referent -->
-    <div class="tab-pane container-fluid" id="activist-referent"
-         th:classappend="${tab == 'activist-referent'} ? 'active'"
-         th:if="${tab == 'activist-referent'}">
+		<!-- activist and referent -->
+		<div class="tab-pane container-fluid" id="activist-referent"
+				 th:classappend="${tab == 'activist-referent'} ? 'active'"
+				 th:if="${tab == 'activist-referent'}">
 
-      <!-- activist profile -->
-      <section class="display-category" id="activist"
-               th:replace="persons/activistProfile :: profile">
-      </section>
+			<!-- activist profile -->
+			<section class="display-category" id="activist"
+							 th:replace="persons/activistProfile :: profile">
+			</section>
 
-      <!-- referent profile -->
-      <section class="display-category" id="referent"
-               th:replace="persons/referentProfile :: profile">
-        <div class="row">
-          <h2>Referierenden-Infos</h2>
-        </div>
-      </section>
-    </div>
+			<!-- referent profile -->
+			<section class="display-category" id="referent"
+							 th:replace="persons/referentProfile :: profile">
+				<div class="row">
+					<h2>Referierenden-Infos</h2>
+				</div>
+			</section>
+		</div>
 
-    <section class="display-category tab-pane" id="events" role="tabpanel"
-             th:classappend="${tab == 'events'} ? 'active'"
-             th:if="${tab == 'events'}">
+		<section class="display-category tab-pane" id="events" role="tabpanel"
+						 th:classappend="${tab == 'events'} ? 'active'"
+						 th:if="${tab == 'events'}">
 
-      <div th:replace="persons/events :: timeline"></div>
+			<div th:replace="persons/events :: timeline"></div>
 
-    </section>
+		</section>
 
-    <section class="display-category tab-pane" id="newsletters" role="tabpanel"
-             th:classappend="${tab == 'newsletters'} ? 'active'"
-             th:if="${tab == 'newsletters'}">
+		<section class="display-category tab-pane" id="newsletters" role="tabpanel"
+						 th:classappend="${tab == 'newsletters'} ? 'active'"
+						 th:if="${tab == 'newsletters'}">
 
-      <div th:replace="persons/subscribedNewsletters :: newsletters"></div>
+			<div th:replace="persons/subscribedNewsletters :: newsletters"></div>
 
-    </section>
+		</section>
 
-  </article>
+	</article>
 
 </main>
 
 <form id="logout-user" method="POST" th:action="@{/logout}">
-  <input name="csrf" th:value="csrf" type="hidden"/>
+	<input name="csrf" th:value="csrf" type="hidden"/>
 </form>
 
 <script src="../../static/resources/js/jquery.min.js" th:src="@{/webjars/jquery/jquery.min.js}"
-        type="text/javascript"></script>
+				type="text/javascript"></script>
 <script src="../../static/resources/js/bootstrap.min.js"
-        th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"
-        type="text/javascript"></script>
+				th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"
+				type="text/javascript"></script>
 <script src="../../static/resources/js/bootstrap-select.min.js"
-        th:src="@{/resources/js/bootstrap-select.min.js}"
-        type="text/javascript"></script>
+				th:src="@{/resources/js/bootstrap-select.min.js}"
+				type="text/javascript"></script>
 
 <script src="../../static/resources/js/list.min.js" th:if="${tab == 'events'}"
-        th:src="@{/resources/js/list.min.js}"
-        type="text/javascript"></script>
+				th:src="@{/resources/js/list.min.js}"
+				type="text/javascript"></script>
 <script src="../../static/resources/js/list.fuzzysearch.min.js" th:if="${tab == 'events'}"
-        th:src="@{/resources/js/list.fuzzysearch.min.js}"
-        type="text/javascript"></script>
+				th:src="@{/resources/js/list.fuzzysearch.min.js}"
+				type="text/javascript"></script>
+<script src="../../static/resources/js/participationTimeline.js"
+				th:src="@{/resources/js/participationTimeline.js}" th:if="${tab == 'events'}"></script>
 
 <script src="../../static/resources/js/init.js" th:src="@{/resources/js/init.js}"></script>
 <script src="../../static/resources/js/formControls.js"
-        th:src="@{/resources/js/formControls.js}"></script>
+				th:src="@{/resources/js/formControls.js}"></script>
 <script src="../../static/resources/js/personDetails.js"
-        th:src="@{/resources/js/personDetails.js}"></script>
+				th:src="@{/resources/js/personDetails.js}"></script>
 
 <script th:if="${participationFailed}">
-  $(document).ready(() => $('#participation-failed-dialog').modal('show'));
+	$(document).ready(() => $('#participation-failed-dialog').modal('show'));
 </script>
 
 <script th:if="${param.form != null and param.form[0] == 'edit-person'}">
-  $(document).ready(() => $('#edit-person-dialog').modal('show'));
+	$(document).ready(() => $('#edit-person-dialog').modal('show'));
 </script>
 
 <script th:if="${param.do != null and param.do[0] == 'add-parent'}" th:inline="javascript">
-  $(document).ready(() => {
-    const modal = $('#add-parent-dialog');
-    const tab = /*[[${param.tab != null} ? ${param.tab[0]} : '']]*/ 'general';
-    modal.modal('show').find(`#${tab}`).tab('show');
-  });
+	$(document).ready(() => {
+		const modal = $('#add-parent-dialog');
+		const tab = /*[[${param.tab != null} ? ${param.tab[0]} : '']]*/ 'general';
+		modal.modal('show').find(`#${tab}`).tab('show');
+	});
 </script>
 
 <script th:if="${param.do != null and param.do[0] == 'add-sibling'}" th:inline="javascript">
-  $(document).ready(() => {
-    const modal = $('#add-sibling-dialog');
-    const tab = /*[[${param.tab != null} ? ${param.tab[0]} : '']]*/ 'general';
-    modal.modal('show').find(`#${tab}`).tab('show');
-  });
+	$(document).ready(() => {
+		const modal = $('#add-sibling-dialog');
+		const tab = /*[[${param.tab != null} ? ${param.tab[0]} : '']]*/ 'general';
+		modal.modal('show').find(`#${tab}`).tab('show');
+	});
 </script>
 
 <script th:if="${param.do != null and param.do[0] == 'add-child'}" th:inline="javascript">
-  $(document).ready(() => {
-    const modal = $('#add-child-dialog');
-    const tab = /*[[${param.tab != null} ? ${param.tab[0]} : '']]*/ 'general';
-    modal.modal('show').find(`#${tab}`).tab('show');
-  });
+	$(document).ready(() => {
+		const modal = $('#add-child-dialog');
+		const tab = /*[[${param.tab != null} ? ${param.tab[0]} : '']]*/ 'general';
+		modal.modal('show').find(`#${tab}`).tab('show');
+	});
 </script>
 
 <script th:if="${param.form != null and param.form[0] == 'add-qualification'}"
-        th:inline="javascript">
-  $(document).ready(() => {
-    const modal = $('#add-qualification-dialog');
-    const tab = /*[[${param.tab != null} ? ${param.tab[0]} : '']]*/ 'general';
-    modal.modal('show');
-    modal.find(`#${tab}`).tab('show');
-  });
+				th:inline="javascript">
+	$(document).ready(() => {
+		const modal = $('#add-qualification-dialog');
+		const tab = /*[[${param.tab != null} ? ${param.tab[0]} : '']]*/ 'general';
+		modal.modal('show');
+		modal.find(`#${tab}`).tab('show');
+	});
 </script>
 
 <script th:if="${tab == 'events'}" type="text/javascript">
-  const fuzzyOptions = {
-    searchClass: "fuzzy-search",
-    location: 0,
-    distance: 150,
-    threshold: 0.4,
-    multiSearch: true
-  };
-  const eventOptions = {
-    listClass: "events",
-    valueNames: ['name', 'time', 'place', 'belonging'],
-    plugins: [ListFuzzySearch(fuzzyOptions)]
-  };
-  new List('add-participations-dialog', eventOptions);
+	const fuzzyOptions = {
+		searchClass: "fuzzy-search",
+		location: 0,
+		distance: 150,
+		threshold: 0.4,
+		multiSearch: true
+	};
+	const eventOptions = {
+		listClass: "events",
+		valueNames: ['name', 'time', 'place', 'belonging'],
+		plugins: [ListFuzzySearch(fuzzyOptions)]
+	};
+	new List('add-participations-dialog', eventOptions);
 </script>
 
 </body>
