--- a/src/main/resources/templates/events/overview.html
+++ b/src/main/resources/templates/events/overview.html
@@ -148,7 +148,7 @@
             </a>
           </td>
           <td class="col-md-1">
-          	<span data-toggle="tooltip" data-placement="bottom" data-container="body"
+          	<span class="occupation-pictogram" data-toggle="tooltip" data-placement="bottom" data-container="body"
                     th:attrappend="data-title='' + ${event.participantsList.participantsCount} + ' Anmeldungen'"
                     th:with="occupation = ${event.participantsList.occupationRatio}">
 	          	<span class="glyphicon glyphicon-hourglass" th:if="${occupation} LT 0.1"></span>
